[package]
name = "flow-lib"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
inventory = "0.3"
async-trait = "0.1"
log = "0.4"
bincode = "1"
ureq = "2.5.0"
bytes = "1.2.1"
thiserror = "1.0.31"
url = { version = "2.2.2", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
serde_json = { version = "1" }
solana-sdk = "1.14"
solana-client = "1.14"
http = "0.2"
tower = { version = "0.4", features = ["full"] }

# space operator
value = { path = "../value" , version = "0.0.1" }
