[package]
name = "value"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
solana-sdk = "1.14"
rust_decimal = { version = "1.26", features = ["serde-with-str"] }
ed25519-dalek = "1"
thiserror = "1"
bs58 = "0.4"
indexmap = { version = "1.9.1", features = ["serde-1"] }

[dev-dependencies]
rust_decimal_macros = "1.26"
