[package]
name = "cmds-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.14.13"
solana-client = "1.14.13"
solana-program = "1.14.13"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
spl-memo = { version = "3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
mpl-token-auth-rules = "1.2"
mpl-token-metadata = "1.8"
mpl-candy-machine-core = {version="1.0.1", features = ["no-entrypoint"]}
async-trait = "0.1"
tiny-bip39 = "0.8"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1.26", features = ["maths"] }
bincode = "1"
base64 = "0.13"
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }
tokio = { version = "1", features = ["time", "macros"] }
mime_guess = "2"
borsh = "0.9"
bytes = "1"
bundlr-sdk = { version = "0.3.0", default-features = false, features = [
    "solana",
] }
ed25519-dalek = "1"
futures = "0.3"
thiserror = "1"
anyhow = "1"
serde_with = "2.1"
rhai = "1.10.1"
indexmap = { version = "1.9.1", features = ["serde-1"] }
bs58 = "0.4"
anchor-lang ="0.26.0"
anchor-spl ="0.26.0"
fasteval = "0.2.4"
tracing = "0.1"

value = { path = "../value", version = "0.0.1" }
flow-lib = { path = "../flow-lib", version = "0.0.1" }

clockwork-client = "2.0.1"
clockwork-utils = "2.0.1"
clockwork-thread-program = "2.0.1"



# [dependencies.clockwork-thread-program]
# git = "https://github.com/space-operator/clockwork.git"
# rev = "efd73675f670bfc0aab551d89c741e18c8cfed10"

[dependencies.payments]
git = "https://github.com/clockwork-xyz/examples.git"
rev = "1b65e8185796b4eac009750c0a0b8128576201ad"

[dependencies.metaboss_utils]
git = "https://github.com/space-operator/metaboss_utils.git"
rev = "5e0a4c9bcd16d2f062549e190e928bebb135537f"

[dependencies.space-wrapper]
git = "https://github.com/space-operator/space-wrapper"
rev = "2411d9230de957161ce39856d90383ada305c867"
features = ["cpi"]


[dev-dependencies]
rust_decimal_macros = "1.26"
