[package]
name = "flow-lib"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
inventory = "0.3"
async-trait = "0.1"
log = "0.4"
bincode = "1"
ureq = "2.5.0"
bytes = "1.2.1"
thiserror = "1.0.31"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1"
serde_with = "2.2"
solana-sdk = "1.14"
solana-client = "1.14"
http = "0.2"
tower = { version = "0.4", features = ["full"] }
indexmap = "1"

# space operator
value = { path = "../value" , version = "0.0.1" }
