[package]
name = "value"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["solana"]
solana = ["dep:solana-sdk"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rust_decimal = { version = "1.26", features = ["serde-with-str"] }
thiserror = "1"
bs58 = "0.4"
indexmap = { version = "1.9.1", features = ["serde-1"] }
bytes = { version = "1", features = ["serde"] }
itoa = "1"
base64 = "0.13"
solana-sdk = { version = "1", optional = true }

[dev-dependencies]
rust_decimal_macros = "1.26"
