[package]
name = "case_conversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
serde_json = "1.0.87"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"

[profile.release]
lto = true
strip = true

[lib]
crate-type = ["cdylib"]